src/client/styles/main.scss
.fc-col {
  display: flex;
  flex-direction: column;
}

.fc-row {
  display: flex;
  flex-direction: row;
}

.flex-1 {
  flex: 1;
}

.fi-grow-3 {
  flex-grow: 3;
}

.fi-grow-2 {
  flex-grow: 2;
}

.fi-grow-1 {
  flex-grow: 1;
}

.ju-start {
  justify-content: flex-start;
}

.ju-center {
  justify-content: center;
}

.ju-end {
  justify-content: flex-end;
}

.ma-r10 {
  margin-right: 10px;
}

.ma-r20 {
  margin-right: 20px;
}

.ma-l10 {
  margin-left: 10px;
}

.ma-l20 {
  margin-left: 20px;
}

.ma-t10 {
  margin-top: 10px;
}
.ma-t20 {
  margin-top: 20px;
}

.ma-t30 {
  margin-top: 30px;
}

.ma-t50 {
  margin-top: 50px;
}

.ma-t100 {
  margin-top: 100px;
}

.ma-b10 {
  margin-bottom: 10px;
}

.ma-b20 {
  margin-bottom: 20px;
}

.ma-b30 {
  margin-bottom: 30px;
}

.ma-b50 {
  margin-bottom: 50px;
}

.ma-b100 {
  margin-bottom: 100px;
}

.ma-b150 {
  margin-bottom: 150px;
}

.pad-t20 {
  padding-top: 20px;
}

.pad10 {
  padding: 10px;
}

.pad20 {
  padding: 20px;
}

.pad-icon {
  padding: 20px 20px 10px 20px;
}

.max-w900 {
  max-width: 900px;
}

.w900 {
  width: 900px;
}

.width-100 {
  width: 100%;
}

.content {
  position: relative;
}

.title {
  font-family: 'Work Sans', sans-serif;
  font-weight: 300;
  font-size: 44pt;
  text-align: center;
}

.instructions {
  font-family: 'Work Sans', sans-serif;
  font-size: 12pt;
  text-align: center;
  margin-top: 20px;
}

.error {
  font-family: 'Open Sans', sans-serif;
  font-size: 11pt;
  color: var(--carnelian);
}

.input_container {
  display: flex;
  flex-direction: row;
}

@media screen and (max-width: 650px) {
  .input_container {
    display: flex;
    flex-direction: column;
  }
}

.input-label {
  font-family: 'Open Sans', sans-serif;
  font-size: 14pt;
  color: white;
}

.input {
  font-family: 'Open Sans', sans-serif;
  font-size: 14pt;
  color: white;
  background-color: var(--field-drab);
  border-radius: 0;
  border-top-style: hidden;
  border-right-style: hidden;
  border-left-style: hidden;
  border-bottom-style: hidden;
}

.input::placeholder {
  color: white;
  opacity: 0.4;
}

.input:focus {
  outline: none;
}

.input:focus,
.input:active {
  border-bottom: 3px solid var(--field-drab);
}

.submit {
  font-family: 'Open Sans', sans-serif;
  font-size: 14pt;
  color: white;
  background-color: var(--hookers-green);
  border-radius: 3px;
  border: hidden;
  padding: 10px;
}

.submit:hover {
  box-shadow: 0 0 7px var(--midnight-green-eagle-green);
}

.submit:active {
  background-color: var(--midnight-green-eagle-green);
}

.remove {
  font-family: 'Open Sans', sans-serif;
  font-size: 14pt;
  color: white;
  background-color: var(--midnight-green-eagle-green);
  border-radius: 3px;
  border: var(--hookers-green) 3px solid;
  padding: 3px 20px 3px 20px;
}

.remove:hover {
  box-shadow: 0 0 7px var(--hookers-green);
}

.remove:active {
  background-color: var(--hookers-green);
}

.top-line {
  border-top: var(--hookers-green) 1px solid;
}

.left-line {
  border-left: var(--hookers-green) 1px solid;
}

.bkg-col-midnight-green-eagle-green {
  background-color: var(--midnight-green-eagle-green);
}

.bkg-col-olive-drab-7 {
  background-color: var(--olive-drab-7);
}

.bkg-col-field-drab {
  background-color: var(--field-drab);
}

.default-font {
  font-family: 'Work Sans', sans-serif;
  font-weight: normal;
  font-size: 14pt;
  color: white;
}

.light-font {
  font-family: 'Work Sans', sans-serif;
  font-weight: 200;
  font-size: 14pt;
  color: white;
}

.city {
  font-family: 'Work Sans', sans-serif;
  font-weight: normal;
  font-size: 32pt;
  color: white;
}

.country {
  font-family: 'Work Sans', sans-serif;
  font-weight: normal;
  font-size: 12pt;
  color: white;
}

.time {
  font-family: 'Work Sans', sans-serif;
  font-weight: normal;
  font-size: 24pt;
  color: white;
}

.tz {
  font-family: 'Work Sans', sans-serif;
  font-weight: normal;
  font-size: 8pt;
  color: white;
}

.icon {
  font-size: 44pt;
  color: white;
}

.temp {
  font-family: 'Work Sans', sans-serif;
  font-weight: 300;
  font-size: 44pt;
  color: white;
}

.value {
  font-family: 'Work Sans', sans-serif;
  font-weight: 200;
  font-size: 10pt;
  color: white;
  padding: 4px 0 4px 0;
}

.txt-center {
  text-align: center;
}

.forc-text {
  font-family: 'Work Sans', sans-serif;
  font-weight: 200;
  font-size: 10pt;
  color: white;
  padding: 8px;
}

@media screen and (max-width: 500px) {
  .temp-range {
    display: none;
  }
}

@media screen and (min-width: 501px) {
  .temp-single {
    display: none;
  }
}

.forc-icons {
  color: white;
  padding: 5px;
}

.img-box {
  background-size: cover;
  background-position: center;
}

.img-box-below {
  height: 300px;
}

@media screen and (max-width: 600px) {
  .img-box-small {
    display: none;
  }
}

@media screen and (min-width: 601px) {
  .img-box-below {
    display: none;
  }
}

.im-box-min-space {
  flex-basis: 40%;
}

.img-desc {
  font-family: 'Work Sans', sans-serif;
  background-color: white;
  opacity: 0.6;
  font-size: 11pt;
  color: black;
  padding: 8px 8px 6px 8px;
}

.img-credit {
  font-family: 'Work Sans', sans-serif;
  background-color: white;
  opacity: 0.6;
  font-size: 8pt;
  color: black;
  padding: 8px 8px 8px 8px;
}

.other-credits {
  font-family: 'Work Sans', sans-serif;
  background-color: white;
  opacity: 0.6;
  font-size: 8pt;
  color: black;
  padding: 8px;
}

.border-l {
  border-left: var(--hookers-green) 1px solid;
}

.visibility-hidden {
  visibility: hidden;
}

.display-none {
  display: none;
}

.red {
  background: orangered;
}

.green {
  background: yellowgreen;
}

.blue {
  background: steelblue;
}

.dbg-border--red {
  border: red 1px solid;
}

.dbg-border--blue {
  border: blue 1px solid;
}

.dbg-border--green {
  border: green 1px solid;
}

.dbg-border-space {
  padding: 1px;
  margin: 1px;
}

